@startuml
' Gunakan skinparam biar lebih bersih
hide circle
skinparam linetype ortho

entity users {
    *id : bigint
    name : string
    email : string
    password : string
    phone : string
    address : string
    due_date : tinyint
    status : enum
}

entity packages {
    *id : bigint
    name : string
    speed : string
    price : decimal
    description : text
    status : string
}

entity user_packages {
    *id : bigint
    user_id : FK
    package_id : FK
    package_name_snapshot : string
    package_price_snapshot : decimal
    active_discount_amount : decimal
    active_discount_duration : tinyint
    is_active : enum
    created_at : timestamp
}

entity user_bills {
    *id : bigint
    user_id : FK
    billing_month : date
    amount : decimal
    discount_amount : decimal
    discount_reason : string
    status : enum
    payment_method : enum
    transfer_date : date
    transfer_proof : string
    paid_at : date
    invoice_number : string
}

entity bill_items {
    *id : bigint
    user_bill_id : FK
    package_id : FK
    billed_package_name : string
    billed_package_price : decimal
    package_discount_amount : decimal
    final_amount : accessor
}

entity invoices {
    *id : bigint
    user_bill_id : FK
    date : date
    file_path : string
}

entity incomes {
    *id : bigint
    user_bill_id : FK
    date : date
    amount : decimal
    description : string
}

entity expenses {
    *id : bigint
    date : date
    amount : decimal
    description : string
}

entity tickets {
    *id : bigint
    user_id : FK
    subject : string
    description : text
    status : enum
}

entity ticket_replies {
    *id : bigint
    ticket_id : FK
    user_id : FK
    message : text
    attachment : string
}

' === RELATIONSHIPS ===

users ||--o{ user_packages : has
users ||--o{ user_bills : has
users ||--o{ tickets : has
packages ||--o{ user_packages : assigned
packages ||--o{ bill_items : snapshot
user_packages }o--|| packages
user_packages }o--|| users

user_bills ||--o{ bill_items : detail
user_bills ||--o{ invoices : has
user_bills ||--o{ incomes : generate
user_bills ||--o{ expenses : relate (manual)
user_bills ||--o{ bill_items
bill_items }o--|| packages

tickets ||--o{ ticket_replies : has
ticket_replies }o--|| users

@enduml
